# gaitcontrol

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  spgait.cpp  testplugin.py
app/: main.cpp  oscillator.cpp  setpose.cpp  squattest.cpp  staticstep.cpp  staticstep2.cpp  staticstep3.cpp  testarmsCANspeed.cpp  zmpgait.cpp
cmake/: FindGAIT.cmake  Findgait.cmake
lib/: CMakeLists.txt
lib/gait/: CMakeLists.txt
lib/gait/doc/html/: Gait_8h_source.html  annotated.html  classGait-members.html  classGait.html  classGait__inherit__graph.dot  classGait__inherit__graph.md5  classes.html  classspGait-members.html  classspGait.html  classspGait__coll__graph.md5  classspGait__inherit__graph.dot  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_func.html  hierarchy.html  inherit_graph_0.dot  inherit_graph_0.md5  inherits.html  spgait_8h_source.html
lib/gait/doc/html/search/: all_0.js  all_1.js  all_2.js  classes_0.js  classes_1.js  searchdata.js
lib/gait/doc/latex/: annotated.tex  classGait.tex  classGait.tex.tmp  classGait__inherit__graph.dot  classGait__inherit__graph.md5  classspGait.tex  classspGait__coll__graph.md5  classspGait__inherit__graph.dot  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  hierarchy.tex  refman.tex
lib/gait/src/: Gait.cpp  Gait.h  GaitSP.cpp  GaitSP.h  GaitSupportPoligon.cpp  GaitSupportPoligon.h  spgait.cpp  spgait.h  tools.cpp  tools.h
src/: main.cpp
test/: kinematics.cpp  lipm.cpp  poses.cpp  rotations.cpp  tools.cpp
